[package]
name = "adder-viz"
version = "0.1.1"
edition = "2021"
resolver = "2"
authors = ["Andrew C. Freeman"]
description = """
A GUI project to visualize and tune parameters of an ADDER asynchronous video transcode.
"""

homepage = "https://github.com/ac-freeman/adder-viz"
repository = "https://github.com/ac-freeman/adder-viz"
readme = "README.md"
license-file = "LICENSE"
keywords = ["neuromorphic", "visualization", "video", "asynchronous", "event"]

[dependencies]
adder-codec-rs = { version = "0.2.2", features = ["transcoder"] }
#adder-codec-rs = { path = "/home/andrew/Code/adder-codec-rs", features = ["transcoder"] }
#bevy = { version = "0.9.0", features = ["dynamic"] }
bevy = "0.9.0"
bevy_egui = "0.18.0"
#egui_dock = "0.2.1"
#egui_dock = { path = "/home/andrew/Code/egui_dock" }
bevy_editor_pls = "0.2.0"
#davis-edi-rs = "0.1.4"
rayon = "1.5.3"
tokio = {version = "1.20.1", features = ["full"]}
opencv = "0.66.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true

#[target.x86_64-unknown-linux-gnu]
#linker = "clang"
#rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]