[package]
name = "adder-viz"
version = "0.1.1"
edition = "2021"
resolver = "2"
authors = ["Andrew C. Freeman"]
description = """
A GUI project to visualize and tune parameters of an ADDER asynchronous video transcode.
"""

homepage = "https://github.com/ac-freeman/adder-viz"
repository = "https://github.com/ac-freeman/adder-viz"
readme = "README.md"
license-file = "LICENSE"
keywords = ["neuromorphic", "visualization", "video", "asynchronous", "event"]

[features]
default = ["adder_codec_rs/transcoder", "opencv"]
docs-only = ["adder_codec_rs/docs-only", "opencv/docs-only"]

[dependencies.adder_codec_rs]
version = '0.2.3'
package = 'adder-codec-rs'
default-features = false
features = ["transcoder"]
optional = false

[dependencies.opencv]
version = '0.66.0'
package = 'opencv'
default-features = false
features = ['videoio', 'imgproc', 'highgui']
optional = true

[dependencies]
bevy = "0.9.0"
bevy_egui = "0.18.0"
bevy_editor_pls = "0.2.0"
egui_file = "0.5"
rayon = "1.5.3"
rfd = "0.10.0"
tokio = {version = "1.20.1", features = ["full"]}
strum = "0.24.1"
strum_macros = "0.24.3"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true

[package.metadata.docs.rs]
no-default-features = true
default-target = "x86_64-unknown-linux-gnu"
features = ["docs-only"]
